--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="assignments"/>
-	<classpathentry kind="lib" path="C:/Users/HP/Downloads/ODTwithODAC122011/stage/ext/jlib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="library/ojdbc8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
